packages/kit/test/apps/basics/src/routes/errors/init-error-endpoint/+server.js
import { json } from '@sveltejs/kit';

// @ts-expect-error
thisvariableisnotdefined;

export function GET() {
	return json({
		answer: 42
	});
}
